force-app/main/default/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Association Lecture</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Confirmed Interest</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Proposal</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Customer Care</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Confirmed Interest</fullName>
        </values>
        <values>
            <fullName>Finalizing</fullName>
        </values>
        <values>
            <fullName>Progressing</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Internal Real Estate Administration</fullName>
        <description>This Sales Process is used for managing opportunities from start to end of the Internal Real Estate Administration cycle</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Proposal</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Lecture Booking Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting Confirmation</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Confirmed Interest</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Progressing</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Private Inheritance Law</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Proposal</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Achieved_Outcomes__c</fullName>
        <label>Achieved Outcomes</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Partner Referral Created</fullName>
                </value>
                <value>
                    <fullName>Reference Lead Created</fullName>
                </value>
                <value>
                    <fullName>Additional Services Sold</fullName>
                </value>
                <value>
                    <fullName>Positive Review Generated</fullName>
                </value>
                <value>
                    <fullName>Customer Satisfaction Survey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Appointment_Status__c</fullName>
        <label>Appointment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Appointment_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Campaign_State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Call Campaign State</label>
        <referenceTo>telegenta__Call_Campaign_State__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Call Campaign</label>
        <referenceTo>telegenta__Campaign__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Captured_Charge_Count__c</fullName>
        <label>Captured Charge Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Captured_Charges__c</fullName>
        <label>Captured Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Captured_Transfer_Count__c</fullName>
        <label>Captured Transfer Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Captured_Transfers__c</fullName>
        <label>Captured Transfers</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Real Estate Administration</fullName>
                </value>
                <value>
                    <fullName>Customer Care</fullName>
                </value>
                <value>
                    <fullName>Reengagement</fullName>
                </value>
                <value>
                    <fullName>Organic</fullName>
                </value>
                <value>
                    <fullName>Association</fullName>
                </value>
                <value>
                    <fullName>Subscription Renewal</fullName>
                </value>
                <value>
                    <fullName>Event Booking</fullName>
                </value>
                <value>
                    <fullName>Document Review Upsell</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closed_Lost_Prospects__c</fullName>
        <label>Closed Lost Prospects</label>
        <summaryFilterItems>
            <field>Prospect__c.Prospect_Status__c</field>
            <operation>equals</operation>
            <value>Closed Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>Prospect__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Completed_Payout_Count__c</fullName>
        <label>Completed Payouts Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Completed_Payouts__c</fullName>
        <label>Completed Payouts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Event_Count__c</fullName>
        <label>Event Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Tracker__c</fullName>
        <description>Used when booking lectures</description>
        <displayFormat>E-{0000}</displayFormat>
        <externalId>true</externalId>
        <label>Event Tracker</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Fixed_Discount_Type__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Fixed Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Has_Appointment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Appointment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invalid_Reason__c</fullName>
        <label>Invalid Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Deceased</fullName>
                </value>
                <value>
                    <fullName>Cognitive Decline</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoicing_Agreement__c</fullName>
        <label>Invoicing Agreement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Invoicing_Agreement</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Cancel_Campaigns__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Cancel Campaigns</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Journal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Journal</label>
        <referenceTo>Journal__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Call_Time__c</fullName>
        <label>Last Call Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Campaign__c</fullName>
        <label>Last Campaign</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>My Leads</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Contact_State__c</fullName>
        <label>Last Contact State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Appointment</fullName>
                </value>
                <value>
                    <fullName>No answer or voicemail</fullName>
                </value>
                <value>
                    <fullName>Number busy</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t have time right now</fullName>
                </value>
                <value>
                    <fullName>Unqualified</fullName>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
                <value>
                    <fullName>Missed Appointment</fullName>
                </value>
                <value>
                    <fullName>Released</fullName>
                </value>
                <value>
                    <fullName>Closed - Won</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lecture_Notes__c</fullName>
        <label>Lecture Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>No Budget / Lost Funding</fullName>
                </value>
                <value>
                    <fullName>No Decision / Non-Responsive</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Satisfied but Not Interested</fullName>
                </value>
                <value>
                    <fullName>Dissatisfied with Service</fullName>
                </value>
                <value>
                    <fullName>Prefer Privacy</fullName>
                </value>
                <value>
                    <fullName>Negative Feedback or Complaint</fullName>
                </value>
                <value>
                    <fullName>Unqualified</fullName>
                </value>
                <value>
                    <fullName>Will get back on their own</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market_Unit__c</fullName>
        <label>Market Unit</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Market_Unit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketing Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Marketing_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Status__c</fullName>
        <label>New Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>New_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_Call_Time__c</fullName>
        <label>Next Call Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Not_Interested_Reason__c</fullName>
        <label>Not Interested Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rejected during the introduction</fullName>
                </value>
                <value>
                    <fullName>The customer hung up</fullName>
                </value>
                <value>
                    <fullName>Will get back on their own</fullName>
                </value>
                <value>
                    <fullName>Too expensive</fullName>
                </value>
                <value>
                    <fullName>Cannot afford it</fullName>
                </value>
                <value>
                    <fullName>Follow-up in 3-6 months</fullName>
                </value>
                <value>
                    <fullName>No longer responds</fullName>
                </value>
                <value>
                    <fullName>Does not want furthercontact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notify_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Products__c</fullName>
        <label>Number of Products</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Prospects__c</fullName>
        <label>Number of Prospects</label>
        <summaryForeignKey>Prospect__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Open_Charge_Count__c</fullName>
        <label>Open Charge Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Charges__c</fullName>
        <label>Open Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Open_Payout_Count__c</fullName>
        <label>Open Payout Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Payouts__c</fullName>
        <label>Open Payouts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Open_Prospects__c</fullName>
        <label>Open Prospects</label>
        <summaryFilterItems>
            <field>Prospect__c.Prospect_Status__c</field>
            <operation>equals</operation>
            <value>Not Contacted, No Answer, Working</value>
        </summaryFilterItems>
        <summaryForeignKey>Prospect__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Open_Transfer_Count__c</fullName>
        <label>Open Transfer Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Transfers__c</fullName>
        <label>Open Transfers</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Total__c</fullName>
        <formula>Total_Cost__c - Total_Discount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order_Total__c</fullName>
        <label>Order Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities_on_Child_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Percentage_Discount_Amount__c</fullName>
        <description>Sum of the percentage discount amounts on Opportunity Products</description>
        <inlineHelpText>Sum of the percentage discount amounts on Opportunity Products</inlineHelpText>
        <label>Percentage Discount Amount</label>
        <summarizedField>OpportunityLineItem.Discount_Given__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Phone_Formatted__c</fullName>
        <formula>IF( 
    BEGINS(SUBSTITUTE(Phone__c, &quot; &quot;, &quot;&quot;), &apos;+45&apos;), 
    SUBSTITUTE(Phone__c, &quot; &quot;, &quot;&quot;),
    IF(
        BEGINS(SUBSTITUTE(Phone__c, &quot; &quot;, &quot;&quot;), &apos;45&apos;), 
        &apos;+&apos; + SUBSTITUTE(Phone__c, &quot; &quot;, &quot;&quot;),
        IF(
            AND(
                NOT(BEGINS(SUBSTITUTE(Phone__c, &quot; &quot;, &quot;&quot;), &apos;+45&apos;)), 
                OR( 
                    ISPICKVAL(Market_Unit__c, &apos;DFJ_DK&apos;), 
                    ISPICKVAL(Market_Unit__c, &apos;Testamente_DK&apos;)
                )
            ), 
            &apos;+45&apos; + SUBSTITUTE(Phone__c, &quot; &quot;, &quot;&quot;),
            IF(
                AND(
                    NOT(BEGINS(SUBSTITUTE(Phone__c, &quot; &quot;, &quot;&quot;), &apos;+&apos;)), 
                    OR( 
                        ISPICKVAL(Market_Unit__c, &apos;DFJ_DK&apos;), 
                        ISPICKVAL(Market_Unit__c, &apos;Testamente_DK&apos;)
                    )
                ), 
                &apos;+&apos; + SUBSTITUTE(Phone__c, &quot; &quot;, &quot;&quot;),
                IF(
                    BEGINS(SUBSTITUTE(Phone__c, &quot; &quot;, &quot;&quot;), &apos;+46&apos;), 
                    SUBSTITUTE(Phone__c, &quot; &quot;, &quot;&quot;),
                    IF(
                        BEGINS(SUBSTITUTE(Phone__c, &quot; &quot;, &quot;&quot;), &apos;46&apos;), 
                        &apos;+&apos; + SUBSTITUTE(Phone__c, &quot; &quot;, &quot;&quot;),
                        IF(
                            AND(
                                NOT(BEGINS(SUBSTITUTE(Phone__c, &quot; &quot;, &quot;&quot;), &apos;+46&apos;)), 
                                ISPICKVAL(Market_Unit__c, &apos;FA_SE&apos;)
                            ), 
                            &apos;+46&apos; + SUBSTITUTE(Phone__c, &quot; &quot;, &quot;&quot;),
                            IF(
                                AND(
                                    NOT(BEGINS(SUBSTITUTE(Phone__c, &quot; &quot;, &quot;&quot;), &apos;+&apos;)), 
                                    ISPICKVAL(Market_Unit__c, &apos;FA_SE&apos;)
                                ), 
                                &apos;+&apos; + SUBSTITUTE(Phone__c, &quot; &quot;, &quot;&quot;),
                                SUBSTITUTE(Phone__c, &quot; &quot;, &quot;&quot;)
                            )
                        )
                    )
                )
            )
        )
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone Formatted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Potential_Outcomes__c</fullName>
        <label>Potential Outcomes</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Partner Referral</fullName>
                </value>
                <value>
                    <fullName>Reference Lead</fullName>
                </value>
                <value>
                    <fullName>Upsell</fullName>
                </value>
                <value>
                    <fullName>Positive Review</fullName>
                </value>
                <value>
                    <fullName>Customer Satisfaction Survey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price_Per_Cover__c</fullName>
        <label>Price Per Cover</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Discount_Amount__c</fullName>
        <description>Roll-up up all Opportunity Product Amounts less than 0</description>
        <inlineHelpText>Roll-up up all Opportunity Product Amounts less than 0</inlineHelpText>
        <label>Product Discount Amount</label>
        <summarizedField>OpportunityLineItem.Total_Product_Cost__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Total_Product_Cost__c</field>
            <operation>lessThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Prospects_Converted_to_Leads__c</fullName>
        <label>Prospects Converted to Leads</label>
        <summaryFilterItems>
            <field>Prospect__c.Prospect_Status__c</field>
            <operation>equals</operation>
            <value>Converted To Lead</value>
        </summaryFilterItems>
        <summaryForeignKey>Prospect__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Prospects_Not_Contacted__c</fullName>
        <label>Prospects Not Contacted</label>
        <summaryFilterItems>
            <field>Prospect__c.Prospect_Status__c</field>
            <operation>equals</operation>
            <value>Not Contacted</value>
        </summaryFilterItems>
        <summaryForeignKey>Prospect__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Refunded_Charge_Count__c</fullName>
        <label>Refunded Charge Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Refunded_Charges__c</fullName>
        <label>Refunded Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Retained_Charge_Count__c</fullName>
        <label>Retained Charge Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Retained_Charges__c</fullName>
        <label>Retained Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Retained_Transfer_Count__c</fullName>
        <label>Retained Transfer Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Retained_Transfers__c</fullName>
        <label>Retained Transfers</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reversed_Transfer_Count__c</fullName>
        <label>Reversed Transfer Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reversed_Transfers__c</fullName>
        <label>Reversed Transfers</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Send_SMS_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send SMS Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stop_Calling__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stop Calling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subcategory__c</fullName>
        <label>Subcategory</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Partner Referral</fullName>
                </value>
                <value>
                    <fullName>Reference Lead</fullName>
                </value>
                <value>
                    <fullName>Upsell</fullName>
                </value>
                <value>
                    <fullName>Positive Review</fullName>
                </value>
                <value>
                    <fullName>Satisfaction Survey</fullName>
                </value>
                <value>
                    <fullName>Lecture Booking</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Calls__c</fullName>
        <label>Total Calls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <description>Roll-up up all Order Product Amounts greater than 0</description>
        <inlineHelpText>Roll-up up all Order Product Amounts greater than 0</inlineHelpText>
        <label>Total Cost</label>
        <summarizedField>OpportunityLineItem.Total_Product_Cost__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Total_Product_Cost__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Discount__c</fullName>
        <description>Product Discount Amount + Fixed Discount Amount + Percentage Discount Amount</description>
        <formula>ABS( BLANKVALUE( Product_Discount_Amount__c , 0) )
+ ABS( BLANKVALUE( Fixed_Discount_Type__c , 0) )
+ ABS( BLANKVALUE( Percentage_Discount_Amount__c , 0) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Product Discount Amount + Fixed Discount Amount + Percentage Discount Amount</inlineHelpText>
        <label>Total Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UTM_Campaign__c</fullName>
        <label>UTM Campaign</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>UTM_Campaign</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UTM_Content__c</fullName>
        <label>UTM Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UTM_Medium__c</fullName>
        <label>UTM Medium</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>UTM_Medium</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UTM_Source__c</fullName>
        <label>UTM Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>UTM_Source</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UTM_Term__c</fullName>
        <label>UTM Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unqualified_Status__c</fullName>
        <label>Unqualified Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Unqualified_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unsuccessful_Calls__c</fullName>
        <label>Unsuccessful Calls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Venue_Rental_Cost__c</fullName>
        <label>Venue Rental Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Working_Status__c</fullName>
        <label>Working Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Working_Status</valueSetName>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>Phone__c</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>Association_Lecture_Opportunities</fullName>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>Phone__c</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Association_Lecture</value>
        </filters>
        <label>Association Lecture Opportunities</label>
    </listViews>
</CustomObject>